bitfield/tests/21-unit-struct.stderr
error: expected struct to have at least one field
 --> tests/21-unit-struct.rs:4:8
  |
4 | struct Test;
  |        ^^^^
