bitfield/tests/21-unit-struct.rs
use bitfield::bitfield;

#[bitfield]
struct Test;

fn main() {}
